--- a/.ideavimrc
+++ b/.ideavimrc
@@ -7,6 +7,7 @@ call plug#begin('~/.vim/plugged')
 " VIM Enhancements
 Plug 'ciaranm/securemodelines'
 Plug 'editorconfig/editorconfig-vim'
+Plug 'justinmk/vim-sneak'
 Plug 'jeffkreeftmeijer/vim-numbertoggle'
 Plug 'tpope/vim-surround'
 
@@ -317,15 +318,3 @@ nnoremap <leader>, :set invlist<cr>
 
 " <leader>q shows stats
 nnoremap <leader>q g<c-g>
-
-"" CamelCaseMotion
-if has('nvim')
-	map <silent> w <Plug>CamelCaseMotion_w
-	map <silent> b <Plug>CamelCaseMotion_b
-	map <silent> e <Plug>CamelCaseMotion_e
-	map <silent> ge <Plug>CamelCaseMotion_ge
-	sunmap w
-	sunmap b
-	sunmap e
-	sunmap ge
-endif
