--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -5,8 +5,8 @@
 # These configuration files will be loaded in order, replacing values in files
 # loaded earlier with those loaded later in the chain. The file itself will
 # always be loaded last.
-#import:
-#  - /path/to/alacritty.yml
+import:
+  - /home/deep/software/base16-alacritty/colors/base16-gruvbox-dark-hard-256.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -90,10 +90,10 @@ env:
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
 
-#scrolling:
+scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
-  #history: 10000
+  history: 0 
 
   # Scrolling distance multiplier.
   #multiplier: 3
