--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -134,7 +134,7 @@ blur-background-exclude = [
     "_GTK_FRAME_EXTENTS@:c"
 ];
 opacity-rule = [
-	"96:class_g = 'Alacritty'"
+	# "96:class_g = 'Alacritty'"
 ];
 
 #################################
